--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^1.1.0
   intl: ^0.18.1
+  get : ^4.1.4
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.5.0
   geolocator: ^10.0.1
+  flutter_local_notifications: ^15.1.1
 
 dev_dependencies:
   flutter_test:
