refactor: security 설정

--- a/server/apigateway-service/src/main/resources/application.yml
+++ b/server/apigateway-service/src/main/resources/application.yml
@@ -79,7 +79,7 @@ spring:
         - id: bank-service
           uri: lb://BANK-SERVICE
           predicates:
-            - Path=/bank-service/**
+            - Path=/bank-service/api/**
             - Method=POST, GET, PATCH, DELETE
           filters:
             - RemoveRequestHeader=Cookie
@@ -97,7 +97,7 @@ spring:
         - id: mission-service
           uri: lb://MISSION-SERVICE
           predicates:
-            - Path=/mission-service/**
+            - Path=/mission-service/api/**
             - Method=POST, GET, PATCH, DELETE
           filters:
             - RemoveRequestHeader=Cookie
@@ -108,11 +108,14 @@ spring:
           predicates:
             - Path=/mission-service/actuator/**
             - Method=GET
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/member-service/(?<segment>.*), /$\{segment}
         # openai
         - id: openai-service
           uri: lb://OPENAI-SERVICE
           predicates:
-            - Path=/openai-service/**
+            - Path=/openai-service/api/**
             - Method=POST, GET, PATCH, DELETE
           filters:
             - RemoveRequestHeader=Cookie
@@ -123,11 +126,14 @@ spring:
           predicates:
             - Path=/openai-service/actuator/**
             - Method=GET
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/member-service/(?<segment>.*), /$\{segment}
         # question
         - id: question-service
           uri: lb://QUESTION-SERVICE
           predicates:
-            - Path=/question-service/**
+            - Path=/question-service/api/**
             - Method=POST, GET, PATCH, DELETE
           filters:
             - RemoveRequestHeader=Cookie
@@ -138,11 +144,14 @@ spring:
           predicates:
             - Path=/question-service/actuator/**
             - Method=GET
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/member-service/(?<segment>.*), /$\{segment}
         # noti
         - id: noti-service
           uri: lb://NOTI-SERVICE
           predicates:
-            - Path=/noti-service/**
+            - Path=/noti-service/api/**
             - Method=POST, GET, PATCH, DELETE
           filters:
             - RemoveRequestHeader=Cookie
@@ -153,6 +162,9 @@ spring:
           predicates:
             - Path=/noti-service/actuator/**
             - Method=GET
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/member-service/(?<segment>.*), /$\{segment}
 
 
 management:
