--- a/server/apigateway-service/src/main/resources/application.yml
+++ b/server/apigateway-service/src/main/resources/application.yml
@@ -172,3 +172,7 @@ management:
     web:
       exposure:
         include: refresh, health, beans, httptrace, info, metrics, prometheus, busrefresh
+
+logging:
+  level:
+    com.keeping.apigatewayservice: debug
